# blackreef-axiomiq

./: .gitignore  MANIFEST.in  README.md  config.sample.toml  config.toml  desktop.ini  pyproject.toml  requirements.txt
.github/workflows/: quality.yml  release.yml  smoke.yml
axiomiq/: __init__.py  cli.py  schema_constants.py
axiomiq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
axiomiq/core/: __init__.py  baseline.py  config.py  contract.py  delta.py  drift.py  fleet.py  ingest.py  interpretation.py  scoring.py
axiomiq/report/: __init__.py  json_report.py  pdf_report.py
axiomiq/report/schema/: axiomiq_report.schema.v1.json
axiomiq/schemas/: __init__.py  axiomiq_report.schema.v1.json
axiomiq/tools/: generate_readings.py  validate_json.py
data/: _check.csv
outputs/: last_fleet_snapshot.csv  last_snapshot.csv
scripts/: check.ps1  demo.ps1
tests/: conftest.py  test_baseline.py  test_cli_inprocess.py  test_delta.py  test_drift.py  test_e2e_cli.py  test_golden_json_regression.py  test_risk_signal_semantics.py  test_schema_resource_is_bundled.py  test_schema_validation.py  test_scoring.py  test_smoke_pipeline.py  test_validate_json_schema_version.py
tests/fixtures/: golden_report.v1.json
tests/helpers/: json_normalize.py
