[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiomiq"
version = "0.1.1"
description = "Blackreef AxiomIQ — fleet drift analytics for marine diesel generator sets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "reportlab>=4.0",
  "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0"
]

[project.scripts]
axiomiq = "axiomiq.cli:main"
axiomiq-generate = "axiomiq.tools.generate_readings:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["axiomiq*"]